!12 增加表格列对齐方式align Merge pull request !12 from code_mayun/fix-bug

--- a/packages/UIs/ccms-antd/src/components/formFields/group/index.less
+++ b/packages/UIs/ccms-antd/src/components/formFields/group/index.less
@@ -33,3 +33,6 @@
     }
   }
 }
+.ccms-antd-mini-form-desc:not(:last-child) {
+  margin-bottom: 0px!important;
+}
